[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://themes/LevelSelect_button.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.258824, 0.321569, 0.541176, 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "TITLE_SETTINGS"
align = 1

[node name="SettingsContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -515.0
margin_top = -198.0
margin_right = 515.0
margin_bottom = -58.0
theme = ExtResource( 4 )
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="FullScreenLabel" type="Label" parent="SettingsContainer"]
margin_top = 10.0
margin_right = 440.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 6 )
text = "SETTINGS_FULLSCREEN"

[node name="FullScreenButton" type="Button" parent="SettingsContainer"]
margin_left = 460.0
margin_right = 1030.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
text = "SETTINGS_DISABLED"

[node name="MiuiFixLabel" type="Label" parent="SettingsContainer"]
margin_top = 90.0
margin_right = 440.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 6 )
text = "SETTINGS_MIUI_FIX"

[node name="MiuiFixButton" type="Button" parent="SettingsContainer"]
margin_left = 460.0
margin_top = 80.0
margin_right = 1030.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
text = "SETTINGS_DISABLED"

[node name="ResetContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -515.0
margin_top = 104.0
margin_right = 515.0
margin_bottom = 184.0
theme = ExtResource( 4 )

[node name="ResetButton" type="Button" parent="ResetContainer"]
margin_right = 1030.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
text = "SETTINGS_RESET"

[node name="ReturnButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -46.0
margin_right = 252.0
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 3 )
text = "LEVEL_BACK"
flat = true
align = 0

[connection signal="pressed" from="SettingsContainer/FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
[connection signal="pressed" from="SettingsContainer/MiuiFixButton" to="." method="_on_MiuiFixButton_pressed"]
[connection signal="pressed" from="ResetContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
